sdl-parser/src/snapshots/sdl_parser__condition__tests__command_condition_is_parsed.snap
---
source: sdl-parser/src/condition.rs
expression: condition
---
Condition {
    command: Some(
        "executable/path.sh",
    ),
    interval: Some(
        30,
    ),
    source_helper: None,
    source: None,
}
