sdl-parser/src/snapshots/sdl_parser__condition__tests__command_condition_is_parsed_correctly_even_with_source.snap
---
source: sdl-parser/src/condition.rs
expression: conditions
---
condition-1:
  command: executable/path.sh
  interval: 30
  source: ~
condition-2:
  command: ~
  interval: ~
  source:
    name: digital-library-package
    version: "*"

