sdl-parser/src/snapshots/sdl_parser__condition__tests__command_condition_is_parsed_correctly_with_both_command_and_source.snap
---
source: sdl-parser/src/condition.rs
expression: conditions
---
condition-1:
  command: executable/path.sh
  interval: 30
  source: ~
  description: This is a description for condition 2

