sdl-parser/src/snapshots/sdl_parser__condition__tests__conditions_are_mapped_correctly.snap
---
source: sdl-parser/src/condition.rs
expression: conditions
---
condition-1:
  command: executable/path.sh
  interval: 30
  source: ~
  description: ~
condition-2:
  command: ~
  interval: ~
  source:
    name: digital-library-package
    version: "*"
  description: ~

