sdl-parser/src/snapshots/sdl_parser__condition__tests__handles_metrics_with_conditions_correctly.snap
---
source: sdl-parser/src/condition.rs
expression: conditions
---
condition-1:
  command: executable/path.sh
  interval: 30
  source: ~
  description: This is a description for condition 1
condition-2:
  command: ~
  interval: ~
  source:
    name: digital-library-package
    version: "*"
  description: This is a description for condition 2

